# Spellsource

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .gradletasknamecache  .java-version  .java-version_BACKUP_76010  .travis.yml  CITATION.cff  CONTRIBUTE.md  Dockerfile  ISSUE_TEMPLATE.md  LICENSE.md  MANIFEST.in  README.md  Vagrantfile  agent.sh  build.gradle  build.sh  client.gradle  client.sh  collections.js  csharpconfig.json  deploy.sh  deploy_python.sh  docker-compose-dev.yml  docker-compose.yml  gradle.properties  group_stance_change.json  idea-codestyle-scheme.xml  local.patch  local.sh  localdebug.sh  localdev.sh  makecsharp.sh  minion_attrition_master_rictor.json  minion_chronicler_bah_kini.json  minion_ebisu  minion_ebisus_chosen.json  (+47 more)
.elasticbeanstalk/: az1a-m5.cfg.yml  config.global.yml
.meteor/: packages  versions
ai/: README.md  build.gradle
app/: build.gradle
benchmarks/: build.gradle
buildSrc/: README.md  build.gradle  gradle.properties  settings.gradle
cards/: README.md  build.gradle  cardformatter.py  checks.py  fixfields.py  formatter.py  generate_deck.py  gradle.properties  hearthcards.py  masstest-trace-2020-01-13T21_50_00_960554Z.json  masstest-trace-2020-01-13T21_50_02_851832Z.json  masstest-trace-2020-01-13T21_50_03_017406Z.json  masstest-trace-2020-01-13T21_50_03_068306Z.json  masstest-trace-2020-01-13T21_50_05_464055Z.json  masstest-trace-2020-01-13T21_50_06_215167Z.json  masstest-trace-2020-01-13T21_50_06_725531Z.json  masstest-trace-2020-01-13T21_50_06_927085Z.json  masstest-trace-2020-01-13T21_50_07_370910Z.json  masstest-trace-2020-01-13T21_50_08_009914Z.json  masstest-trace-2020-01-13T21_50_08_725990Z.json  (+38 more)
client/: .gitignore  README.md  (+13 more)
spellsource-python/src/: pyproject.toml
spellsource-python/src/spellsource/: __init__.py  context.py  playrandombehaviour.py  utils.py
spellsource-python/src/spellsource/comfyui_nodes/: __init__.py
spellsource-python/src/spellsource/comfyui_nodes/pixel_art/: __init__.py  palettize.py
spellsource-python/src/spellsource/ext/: __init__.py  cardformatter.py  charrnn.py  hearthcards.py  populatedecklists.py  updatedbf.py
spellsource-python/src/spellsource/tests/: test_deckgen.py
spellsource-python/src/tests/: decks.py  test_image2card.py
(+26819 files in other folders)
